deploy/k8s/micro-all/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moon-web-all
  namespace: moon
  labels:
    app.kubernetes.io/name: moon-web
    app.kubernetes.io/component: all
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: moon-web
    app.kubernetes.io/component: all
  ports:
    - name: http
      port: 80
      targetPort: http
